# alphaV3

./: .gitignore  .main.cpp.un~  CMakeLists.txt  README.md  fragmentlist.txt  main.cpp  main.cpp~
components/avm32/: avm32.cpp  avm32.hpp
components/commandsystem/: commandsystem.hpp
components/compiler/: compiler.cpp  compiler.hpp
components/configLoader/: configLoader.cpp  configLoader.h  configLoader.hpp
components/errorSys/: errorSys.cpp  errorSys.hpp
components/fileReader/: fileReader.cpp  fileReader.hpp
components/interpreter/: interpreter.cpp  interpreter.hpp
components/markerExtracter/: markerExtracter.cpp  markerExtracter.hpp
components/tokenSplitter/: tokenSplitter.cpp
components/tokenSys/: tokenSys.cpp  tokenSys.hpp
components/typeIdentifier/: typeIdentifier.cpp  typeIdentifier.h  typeIdentifier.hpp
components/validator/: validator.cpp  validator.hpp
components/variableSystem/: variableSyste.hpp
demos/: PE001.ac  PE002.ac  acconfig.json  fizzbuzz.ac  higherLower.ac  mand.ac  mandel.ac  rpg.ac  rule110.ac  test.ac
fragments/configLoader/: configLoader.cpp  configLoader.h
fragments/fileReader/: fileReader.cpp  fileReader.hpp
fragments/tokenSplitter/: tokenSplitter.cpp  tokenSplitter.hpp
fragments/tokenSys/: tokenSys.cpp  tokenSys.h  tokenSys.hpp
headers/: json.h
