cmake_minimum_required(VERSION 3.0.0)
project(Alpha)
add_executable(${PROJECT_NAME} main.cpp components/fileReader/fileReader.cpp components/errorSys/errorSys.cpp components/tokenSys/tokenSys.hpp components/tokenSplitter/tokenSplitter.cpp components/tokenSplitter/tokenSplitter.hpp components/tokenSys/tokenSys.cpp components/configLoader/configLoader.cpp components/configLoader/configLoader.hpp headers/json.h components/typeIdentifier/typeIdentifier.cpp components/typeIdentifier/typeIdentifier.hpp components/markerExtracter/markerExtracter.cpp components/markerExtracter/markerExtracter.hpp components/validator/validator.cpp components/validator/validator.hpp)