cmake_minimum_required(VERSION 3.0.0)
project(Alpha)
add_executable(${PROJECT_NAME} main.cpp components/fileReader/fileReader.cpp components/errorSys/errorSys.cpp components/tokenSys/tokenSys.hpp components/tokenSplitter/tokenSplitter.cpp components/tokenSplitter/tokenSplitter.hpp components/tokenSys/tokenSys.cpp headers/json.h components/typeIdentifier/typeIdentifier.cpp components/typeIdentifier/typeIdentifier.hpp components/markerExtracter/markerExtracter.cpp components/markerExtracter/markerExtracter.hpp components/validator/validator.cpp components/validator/validator.hpp components/commandsystem/commandsystem.hpp components/interpreter/interpreter.cpp components/interpreter/interpreter.hpp components/variableSystem/variableSyste.hpp)